get a link out for the spotify demo

--- a/_posts/2017-05-12-elm.md
+++ b/_posts/2017-05-12-elm.md
@@ -187,3 +187,6 @@ subscriptions model =
 
 {% endhighlight %}
 
+#### Conclusion
+[Check it out here](http://yankev.github.io/elm-demos/spotify.html)
+(Just a heads up, it probably needs some styling :p)
