--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -13,6 +13,16 @@ So today I was looking at the problem of generating the fibonacci sequence in **
 Simple
 -------------
 {% highlight clojure %}
+(defn simplefib [n]
+ (case n
+   0 0
+   1 1
+   (+ (simplefib (- n 1)) (simplefib (- n 2)))
+ )
+)
+
+(simplefib 10)
+; 55
 {% endhighlight %}
 
 #### <i class="icon-file"></i> Create a document
