--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -7,10 +7,6 @@ date:   2017-05-15 18:46:00 -0500
 
 So today I was looking at the problem of generating the fibonacci sequence in **Clojure**. Figuring out the value of the sequence at a certain value `n` was simple enough, but the solution to return an entire sequence seemed to elude me. So I did some searching, and it seems like the primary solutions involved the use of lazy-sequences. So I've decided to write about these methods as they do provide insight into lazy sequences and recursion in clojure.
 
-----------
-
-
-Simple
 -------------
 {% highlight clojure %}
 (defn simplefib [n]
@@ -25,9 +21,16 @@ Simple
 ; 55
 {% endhighlight %}
 
-#### <i class="icon-file"></i> Create a document
+So to get the `nth` we just have to use the definition of the fibonacci sequence in order to recursively build upwards, starting with the base cases. Now we move onto collecting these elements to return the full sequence up to the `nth` element.
 
-The document panel is accessible using the <i class="icon-folder-open"></i> button in the navigation bar. You can create a new document by clicking <i class="icon-file"></i> **New document** in the document panel.
+#### The lazy sequence
+
+The first method we're going to look at is possibly the closest and most recognizable to the simple recursive version we just looked at before.
+
+{% highlight clojure %}
+
+{% endhighlight %}
+
 
 ### Fenced code blocks
 
