--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -28,8 +28,25 @@ So to get the `nth` we just have to use the definition of the fibonacci sequence
 The first method we're going to look at is possibly the closest and most recognizable to the simple recursive version we just looked at before.
 
 {% highlight clojure %}
+(defn get-fib-seq [x]
+  (let [lazy-fib-seq
+  ((fn build-fib [a b]
+      (lazy-seq (cons a (build-fib b (+ a b))))
+  ) 0 1)]
+  (rest (take (+ x 1) lazy-fib-seq)))
+)
 
+(get-fib-seq 10)
+; => (1 1 2 3 5 8 13 21 34 55)
 {% endhighlight %}
+
+Let's take a closer look.
+1. The crux of the code relies on the definition of `lazy-fib-seq`
+2. We create a recursive function `build-fib` which takes two values, presenting the `(n - 1)th` and `(n - 2)th` value, required in the fibonacci calculation.
+3. We kick off the function call by call `build-fib` on 0 and 1.
+4. Each time it concatenates `a` onto a lazy sequence, and saving the calculation `b` for a later time. More importantly though, `b` is defined as a recursive call, providing fresh `(n - 1)` and `(n - 2)` values for subsequent calculations.
+5. So basically what we're left with is `lazy-fib-seq`, an infinite sequence of calculations to be performed as we go. Notice that we're actually building this sequence from the ground up, as we would if we were writing this using a loop in any other language.
+6.
 
 
 ### Fenced code blocks
