--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -46,7 +46,9 @@ Let's take a closer look.
 3. We kick off the function call by call `build-fib` on 0 and 1.
 4. Each time it concatenates `a` onto a lazy sequence, and saving the calculation `b` for a later time. More importantly though, `b` is defined as a recursive call, providing fresh `(n - 1)` and `(n - 2)` values for subsequent calculations.
 5. So basically what we're left with is `lazy-fib-seq`, an infinite sequence of calculations to be performed as we go. Notice that we're actually building this sequence from the ground up, as we would if we were writing this using a loop in any other language.
-6.
+6. Finally we return the first `x` number of values from this lazy-sequence using `take` (while omitting the inital 0 using `rest`).
+
+And there you have it!
 
 
 ### Fenced code blocks
