--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -42,48 +42,60 @@ The first method we're going to look at is possibly the closest and most recogni
 
 Let's take a closer look.
 1. The crux of the code relies on the definition of `lazy-fib-seq`
-2. We create a recursive function `build-fib` which takes two values, presenting the `(n - 1)th` and `(n - 2)th` value, required in the fibonacci calculation.
-3. We kick off the function call by call `build-fib` on 0 and 1.
-4. Each time it concatenates `a` onto a lazy sequence, and saving the calculation `b` for a later time. More importantly though, `b` is defined as a recursive call, providing fresh `(n - 1)` and `(n - 2)` values for subsequent calculations.
+2. We create a recursive function `build-fib` which takes two values, presenting the `F(n - 1)th` and `F(n - 2)th` value, required in the fibonacci calculation.
+3. We kick off the function call by calling `build-fib` on 0 and 1.
+4. Each time it concatenates `a` onto a lazy sequence, and saving the calculation `b` for a later time. More importantly though, `b` is defined as a recursive call, providing fresh `F(n - 1)` and `F(n - 2)` values for subsequent calculations.
 5. So basically what we're left with is `lazy-fib-seq`, an infinite sequence of calculations to be performed as we go. Notice that we're actually building this sequence from the ground up, as we would if we were writing this using a loop in any other language.
 6. Finally we return the first `x` number of values from this lazy-sequence using `take` (while omitting the inital 0 using `rest`).
 
-And there you have it!
+And there you have it.
 
 
-### Fenced code blocks
+#### Using iterate
 
-GitHub's fenced code blocks are also supported with **Highlight.js** syntax highlighting:
+There's a function in the core clojure library called `iterate`. And what it does is that it returns a lazy sequence that repeatedly applies the function `f` onto a base case `a`.
+What you might be left with is the following:
+`[a f(a) f(f(a)) ...]`
 
-```
-// Foo
-var bar = 0;
-```
+So again we'd be doing something similar to the previous case, by building the fibonacci sequence from the ground up.
 
-> **Tip:** To use **Prettify** instead of **Highlight.js**, just configure the **Markdown Extra** extension in the <i class="icon-cog"></i> **Settings** dialog.
+{% highlight clojure %}
+(defn fib-add [[a b]]
+  [b (+ a b)]
+)
 
-> **Note:** You can find more information:
+(def fib-seq
+  (map last (iterate fib-add [0 1]))
+)
 
-> - about **Prettify** syntax highlighting [here][5],
-> - about **Highlight.js** syntax highlighting [here][6].
+(take 10 fib-seq)
+; => (1 1 2 3 5 8 13 21 34 55)
+{% endhighlight %}
+
+In this scenario, we first define a function `fib-add` that takes a vector of two values `a` and `b` corresponding the `F(n - 1)` and `F(n - 2)` elements respectively. It then returns a new vector with a new set of values for the subsequent call to `fib-add`. The first will correspond to the current value of `b` (ie: `F(n - 2)`), and the second will be the next value in the fib sequence (ie: `a + b`, or `F(n - 2) + F(n - 1)`) By iterating `fib-add` over the base case `[0 1]`, we will get the following lazy-seqeunce (if evaluated).
+`[[0 1], [1 1], [1, 2], [2, 3], [3, 5], ...]`
+
+Hence we map over this sequence of vectors, getting the second element from each vector.
+Finally by using `take` on this sequence, we can return the first `10` elements from the fibonacci sequence.
+
+#### The confusing corecursion method
+{% highlight clojure %}
+(def fib-seq
+  (lazy-cat [0 1] (map + (rest fib-seq) fib-seq)))
+{% endhighlight %}
+
+`lazy-cat` will concatenate a collection of elements what require future computation. In this case we have this obscure `map` function that adds two sequences, the original `fib-seq` and one with the first value popped off.
 
 
-### Footnotes
+|                  | ASCII                        | HTML              |
+ ----------------- | ---------------------------- | ------------------
+|fib               | `'Isn't this fun?'`            | 'Isn't this fun?' |
+|(rest fib)        | `"Isn't this fun?"`            | "Isn't this fun?" |
+|(+ fib (rest fib))| `-- is en-dash, --- is em-dash` | -- is en-dash, --- is em-dash |
 
 You can create footnotes like this[^footnote].
 
   [^footnote]: Here is the *text* of the **footnote**.
-
-
-### SmartyPants
-
-SmartyPants converts ASCII punctuation characters into "smart" typographic punctuation HTML entities. For example:
-
-|                  | ASCII                        | HTML              |
- ----------------- | ---------------------------- | ------------------
-| Single backticks | `'Isn't this fun?'`            | 'Isn't this fun?' |
-| Quotes           | `"Isn't this fun?"`            | "Isn't this fun?" |
-| Dashes           | `-- is en-dash, --- is em-dash` | -- is en-dash, --- is em-dash |
 
 ### Support StackEdit
 
