--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -85,15 +85,34 @@ Finally by using `take` on this sequence, we can return the first `10` elements 
 {% endhighlight %}
 
 `lazy-cat` will concatenate a collection of elements what require future computation. In this case we have this obscure `map` function that adds two sequences, the original `fib-seq` and one with the first value popped off.
+We will see below how this sequence is to be generated.
+Initially we start with the first two elements of the sequence, being `0 (ie: F(0))` and `1 (ie: F(1))`.
+In which the case the current state of fib-seq will look like the following, where `F(2)` is the sum of the first two elements. Notice that the computation of `F(2)` will be tacked onto both `fib-seq` and `(rest fib-seq)`
+
+| index                     | 0    | 1    | 2    | 3 | ... |
+|---------------------------|------|------|------|---| --- |
+| fib-seq                   | 0    | 1    | F(2) |   | ... |
+| (rest fib-seq)            | 1    | F(2) |      |   | ... |
+| (+ fib-seq (rest fib-seq) | F(2) |      |      |   | ... |
 
 
-|                  | ASCII                        | HTML              |
- ----------------- | ---------------------------- | ------------------
-|fib               | `'Isn't this fun?'`            | 'Isn't this fun?' |
-|(rest fib)        | `"Isn't this fun?"`            | "Isn't this fun?" |
-|(+ fib (rest fib))| `-- is en-dash, --- is em-dash` | -- is en-dash, --- is em-dash |
+| index                     | 0    | 1    | 2    | 3    | ... |
+|---------------------------|------|------|------|------| --- |
+| fib-seq                   | 0    | 1    | F(2) | F(3) | ... |
+| (rest fib-seq)            | 1    | F(2) | F(3) |      | ... |
+| (+ fib-seq (rest fib-seq) | F(2) | F(3) |      |      | ... |
 
-You can create footnotes like this[^footnote].
+and so on...
+
+
+| index                     | 0    | 1    | 2    | 3    | ... |
+|---------------------------|------|------|------|------| --- |
+| fib-seq                   | 0    | 1    | F(2) | F(3) | ... |
+| (rest fib-seq)            | 1    | F(2) | F(3) | F(4) | ... |
+| (+ fib-seq (rest fib-seq) | F(2) | F(3) | F(4) | F(5) | ... |
+
+and we can evalute these values via the definition.
+Hence `F(2) = 0 + 1 = 1`, `F(3) = 1 + F(2) = 1 + 1 = 2` and etc...
 
   [^footnote]: Here is the *text* of the **footnote**.
 
