--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -78,10 +78,16 @@ In this scenario, we first define a function `fib-add` that takes a vector of tw
 Hence we map over this sequence of vectors, getting the second element from each vector.
 Finally by using `take` on this sequence, we can return the first `10` elements from the fibonacci sequence.
 
-#### The confusing corecursion method
+#### The confusing corecursion method [^corecursion]
+
+[^corecursion]: Here is a neat reference for the last method we looked at.
+
 {% highlight clojure %}
 (def fib-seq
   (lazy-cat [0 1] (map + (rest fib-seq) fib-seq)))
+
+(take 10 (drop 1 fib-seq))
+; => (1 1 2 3 5 8 13 21 34 55)
 {% endhighlight %}
 
 `lazy-cat` will concatenate a collection of elements what require future computation. In this case we have this obscure `map` function that adds two sequences, the original `fib-seq` and one with the first value popped off.
@@ -114,21 +120,10 @@ and so on...
 and we can evalute these values via the definition.
 Hence `F(2) = 0 + 1 = 1`, `F(3) = 1 + F(2) = 1 + 1 = 2` and etc...
 
-  [^footnote]: Here is the *text* of the **footnote**.
+Finally we can grab the first 10 elements of the fibonacci sequence like before, but first dropping
+the zero element.
 
-### Support StackEdit
+#### Conclusion
+So we've seen the different methods in which we could generate the fibonacci squence in **clojure**, and the importance of lazy sequences have in the language. They allowed us to define the way in which the sequence should be generatedwithout the need for immediate calculations.
 
-[![](https://cdn.monetizejs.com/resources/button-32.png)](https://monetizejs.com/authorize?client_id=ESTHdCYOi18iLhhO&summary=true)
-
-  [^stackedit]: [StackEdit](https://stackedit.io/) is a full-featured, open-source Markdown editor based on PageDown, the Markdown library used by Stack Overflow and the other Stack Exchange sites.
-
-
-  [1]: http://math.stackexchange.com/
-  [2]: http://daringfireball.net/projects/markdown/syntax "Markdown"
-  [3]: https://github.com/jmcmanus/pagedown-extra "Pagedown Extra"
-  [4]: http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference
-  [5]: https://code.google.com/p/google-code-prettify/
-  [6]: http://highlightjs.org/
-  [7]: http://bramp.github.io/js-sequence-diagrams/
-  [8]: http://adrai.github.io/flowchart.js/
 
