--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -80,7 +80,7 @@ Finally by using `take` on this sequence, we can return the first `10` elements 
 
 #### The confusing corecursion method [^corecursion]
 
-[^corecursion]: Here is a neat reference for the last method we looked at.
+[^corecursion]: [Here](http://squirrel.pl/blog/2010/07/26/corecursion-in-clojure/) is a neat reference for the last method we looked at.
 
 {% highlight clojure %}
 (def fib-seq
@@ -95,6 +95,7 @@ We will see below how this sequence is to be generated.
 Initially we start with the first two elements of the sequence, being `0 (ie: F(0))` and `1 (ie: F(1))`.
 In which the case the current state of fib-seq will look like the following, where `F(2)` is the sum of the first two elements. Notice that the computation of `F(2)` will be tacked onto both `fib-seq` and `(rest fib-seq)`
 
+```
 | index                     | 0    | 1    | 2    | 3 | ... |
 |---------------------------|------|------|------|---| --- |
 | fib-seq                   | 0    | 1    | F(2) |   | ... |
@@ -117,6 +118,8 @@ and so on...
 | (rest fib-seq)            | 1    | F(2) | F(3) | F(4) | ... |
 | (+ fib-seq (rest fib-seq) | F(2) | F(3) | F(4) | F(5) | ... |
 
+```
+
 and we can evalute these values via the definition.
 Hence `F(2) = 0 + 1 = 1`, `F(3) = 1 + F(2) = 1 + 1 = 2` and etc...
 
@@ -125,5 +128,7 @@ the zero element.
 
 #### Conclusion
 So we've seen the different methods in which we could generate the fibonacci squence in **clojure**, and the importance of lazy sequences have in the language. They allowed us to define the way in which the sequence should be generatedwithout the need for immediate calculations.
+
+[^all]: [Here](https://en.wikibooks.org/wiki/Clojure_Programming/Examples/Lazy_Fibonacci) is a reference for all the algorithms covered in this post.
 
 
