--- a/_posts/2017-05-15-fib_clj.md
+++ b/_posts/2017-05-15-fib_clj.md
@@ -23,6 +23,7 @@ So today I was looking at the problem of generating the fibonacci sequence in **
 
 So to get the `nth` we just have to use the definition of the fibonacci sequence in order to recursively build upwards, starting with the base cases. Now we move onto collecting these elements to return the full sequence up to the `nth` element.
 
+### The algorithms [^all]
 #### The lazy sequence
 
 The first method we're going to look at is possibly the closest and most recognizable to the simple recursive version we just looked at before.
